tests/indexer/indexer.exp
Error ------------------------------------------------------------------------------------------------------- A.js:13:10

Cannot return object literal because property `foo` is missing in object type [1] but exists in object literal [2]. Any
property that does not exist in object type [1] must be compatible with its indexer number [3]. [incompatible-type]

   A.js:13:10
   13|   return { foo: "bar" }
                ^^^^^^^^^^^^^^ [2]

References:
   A.js:12:18
   12| function foo2(): {[key: number]: string} {
                        ^^^^^^^^^^^^^^^^^^^^^^^ [1]
   A.js:12:25
   12| function foo2(): {[key: number]: string} {
                               ^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------------- A.js:18:17

Cannot return object literal because string [1] is incompatible with number [2] in property `foo`. [incompatible-type]

   A.js:18:17
   18|   return { foo: "bar" }
                       ^^^^^ [1]

References:
   A.js:17:34
   17| function foo3(): {[key: string]: number} {
                                        ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------- A.js:23:10

Cannot return object literal because property `foo` is missing in object type [1] but exists in object literal [2]. Any
property that does not exist in object type [1] must be compatible with its indexer number [3]. [incompatible-type]

   A.js:23:10
   23|   return { foo: "bar" }
                ^^^^^^^^^^^^^^ [2]

References:
   A.js:22:18
   22| function foo4(): {[key: number]: number} {
                        ^^^^^^^^^^^^^^^^^^^^^^^ [1]
   A.js:22:25
   22| function foo4(): {[key: number]: number} {
                               ^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------------- A.js:38:17

Cannot return object literal because string [1] is incompatible with number [2] in property `foo`. [incompatible-type]

   A.js:38:17
   38|   return { foo: "bar" }
                       ^^^^^ [1]

References:
   A.js:37:47
   37| function foo7(): {[key: string]: number; foo: number} {
                                                     ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ call.js:2:2

Cannot cast `y` to object type because object type [1] is incompatible with function prototype [2]. [incompatible-type]

   call.js:2:2
   2| (y: {(number): string, ...});
       ^

References:
   call.js:1:16
   1| declare var y: {[string]: boolean};
                     ^^^^^^^^^^^^^^^^^^^ [1]
   call.js:2:5
   2| (y: {(number): string, ...});
          ^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ call.js:2:2

Cannot cast `y` to object type because a call signature declaring the expected parameter / return type is missing in
object type [1] but exists in object type [2]. [incompatible-type]

   call.js:2:2
   2| (y: {(number): string, ...});
       ^

References:
   call.js:1:16
   1| declare var y: {[string]: boolean};
                     ^^^^^^^^^^^^^^^^^^^ [1]
   call.js:2:5
   2| (y: {(number): string, ...});
          ^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- multiple.js:5:7

Multiple indexers are not supported. [unsupported-syntax]

   5|       [k2: number]: number, // error: not supported (yet)
            ^^^^^^^^^^^^^^^^^^^^



Found 7 errors
